fix-dropdowns-spacing-line-height-margin-paddings

--- a/src/app/pages/sub-categories/sub-categories.component.scss
+++ b/src/app/pages/sub-categories/sub-categories.component.scss
@@ -1,33 +1,22 @@
-.example-action-buttons {
- padding-bottom: 20px;
-}
-
-.example-headers-align .mat-expansion-panel-header-description {
- justify-content: space-between;
- align-items: center;
-}
-
-.example-headers-align .mat-form-field+.mat-form-field {
- margin-left: 8px;
-}
-
-
 .mat-form-field+.mat-form-field {
  margin-left: 8px;
 }
 
 ::ng-deep .mat-expansion-indicator {
+ display: flex;
+ align-items: center;
+ justify-content: center;
  background-color: #db0b41;
- height: 50px;
- width: 50px;
+ height: 60px;
+ width: 60px;
  position: relative;
- transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0m
+ transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0m;
 }
 
 
 ::ng-deep .mat-expansion-panel {
  background: #001d3c;
- margin-bottom: 10px !important;
+ margin-bottom: 20px !important;
 }
 
 
@@ -54,9 +43,6 @@
 }
 
 ::ng-deep .mat-expansion-indicator::after {
- position: relative;
- left: 20px;
- top: 10px;
  color: white;
 }
 
@@ -69,6 +55,8 @@
  font-size: 18px;
  padding: 0px 20px;
  font-weight: 700;
+ margin: 0 0 2px 20px;
+ padding: 0px;
 }
 
 .sub-cats-sub-title {
@@ -77,6 +65,8 @@
  line-height: 20px;
  font-weight: 300;
  text-transform: uppercase;
+ margin: 0 0 2px 20px;
+ padding: 0px;
 }
 
 
